--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.2.4",
+    "mongoose-paginate-v2": "^1.7.1",
     "query-string": "^8.1.0"
   }
 }
